Added comments and modified code

--- a/1-Data-Cleaning.ipynb
+++ b/1-Data-Cleaning.ipynb
@@ -1129,7 +1129,7 @@
     }
    ],
    "source": [
-    "# Let's take a look at the transcript for Eddard Stark\n",
+    "# Let's take a look at the transcript for Arya Stark\n",
     "data_df[data_df['speaker']=='arya']['transcript']"
    ]
   },
