--- a/2-Exploratory-Data-Analysis.ipynb
+++ b/2-Exploratory-Data-Analysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "abduct          0      0    0      0        0       0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -654,13 +654,13 @@
        "  ('way', 6)]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find the top 30 words said by each comedian\n",
+    "# Find the top 30 words said by each character\n",
     "top_dict = {}\n",
     "for c in data.columns:\n",
     "    top = data[c].sort_values(ascending=False).head(30)\n",
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
     }
    ],
    "source": [
-    "# Print the top 15 words said by each comedian\n",
+    "# Print the top 15 words said by each character\n",
     "for character, top_words in top_dict.items():\n",
     "    print(character)\n",
     "    print(', '.join([word for word, count in top_words[0:14]]))\n",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
        " 'way']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
     "# Look at the most common top words --> add them to the stop word list\n",
     "from collections import Counter\n",
     "\n",
-    "# Let's first pull out the top 30 words for each comedian\n",
+    "# Let's first pull out the top 30 words for each character\n",
     "words = []\n",
     "for character in data.columns:\n",
     "    top = [word for (word, count) in top_dict[character]]\n",
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1366,19 +1366,19 @@
        " ('clever', 1)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Let's aggregate this list and identify the most common words along with how many routines they occur in\n",
+    "# Let's aggregate this list and identify the most common words along with how many speakers use them\n",
     "Counter(words).most_common()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1403,20 +1403,20 @@
        " 'need']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# If more than half of the comedians have it as a top word, exclude it from the list\n",
+    "# If more than half of the characters have it as a top word, exclude it from the list\n",
     "add_stop_words = [word for word, count in Counter(words).most_common() if count > 7]\n",
     "add_stop_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
     "cv = CountVectorizer(stop_words=stop_words)\n",
     "data_cv = cv.fit_transform(data_clean.transcript)\n",
     "data_stop = pd.DataFrame(data_cv.toarray(), columns=cv.get_feature_names())\n",
-    "data_stop.index = data_clean.index\n",
+    "data_stop.index = data_clean['speaker']\n",
     "\n",
     "# Pickle it for later use\n",
     "import pickle\n",
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
        "617    olenna    there appears to be a good deal of room else..."
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
