--- a/4-Topic-Modeling.ipynb
+++ b/4-Topic-Modeling.ipynb
@@ -2630,10 +2630,10 @@
    },
    "source": [
     "For a first pass of LDA, these kind of make sense to me, so we'll call it a day for now.\n",
-    "* Topic 0: mom, parents [Brienne]\n",
-    "* Topic 1: husband, wife [Sansa, Davos]\n",
-    "* Topic 2: guns [Sam, Jon, Theon]\n",
-    "* Topic 3: profanity [Tyrion, Cersei, Jaime, Daenerys, Varys, Arya, Tywin, Bronn, Olenna]"
+    "* Topic 0: [Brienne]\n",
+    "* Topic 1: [Sansa, Davos]\n",
+    "* Topic 2: [Sam, Jon, Theon]\n",
+    "* Topic 3: [Tyrion, Cersei, Jaime, Daenerys, Varys, Arya, Tywin, Bronn, Olenna]"
    ]
   }
  ],
